[metadata]
name = ya3-collect
version = attr: ya3_collect.__version__
author = Shuhei Nitta
author_email = sn.ecoreuse@gmail.com
url = https://github.com/ecoreuse/ya3-collect
description = Collector for YA3 (Yahoo!-Auction-Access-Analytics)
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE

[options]
python_requires = >= 3.9
include_package_data = True
packages = find:
test_suite = tests
install_requires = 
    click
    beautifulsoup4
    lxml
    requests
    numpy
    pandas
entry_points = file: entry_points.cfg

[options.packages.find]
exclude = 
    tests/*

[mypy]
python_version = 3.9
ignore_missing_imports = True
strict = True

[coverage:run]
omit =
    tests/*

[flake8]
extend-ignore = E203
max-line-length = 119

